Auth and follow unfollow complete

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-const port = 3001
+PORT = 3001
+MONGO_URL = "mongodb+srv://guest1:guest@cluster0.q2vge6i.mongodb.net/?retryWrites=true&w=majority"
+JWT_KEY = "secretoken"
